// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms | Flexbox Flexbox default 1`] = `
.c1 {
  box-sizing: border-box;
  max-width: 25%;
  -webkit-flex-basis: 25%;
  -ms-flex-preferred-size: 25%;
  flex-basis: 25%;
  padding-left: 10px;
  padding-right: 10px;
}

.c3 {
  box-sizing: border-box;
  max-width: 50%;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  padding-left: 10px;
  padding-right: 10px;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -10px;
  margin-right: -10px;
}

.c2 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
    size={3}
  >
    <div
      className="c2"
    >
      Col 1
    </div>
  </div>
  <div
    className="c3"
    size={6}
  >
    <div
      className="c2"
    >
      Col 2
    </div>
  </div>
  <div
    className="c1"
    size={3}
  >
    <div
      className="c2"
    >
      Col 3
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flexbox Flexbox with conditionally hidden flex item 1`] = `
.c1 {
  box-sizing: border-box;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  padding-left: 10px;
  padding-right: 10px;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -10px;
  margin-right: -10px;
}

.c2 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
    order={1}
  >
    <div
      className="c2"
    >
      Col 2
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flexbox Flexbox with conditionally visible flex item 1`] = `
.c3 {
  box-sizing: border-box;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  padding-left: 10px;
  padding-right: 10px;
}

.c1 {
  box-sizing: border-box;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  padding-left: 10px;
  padding-right: 10px;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -10px;
  margin-right: -10px;
}

.c2 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
    order={2}
  >
    <div
      className="c2"
    >
      Col 1
    </div>
  </div>
  <div
    className="c3"
    order={1}
  >
    <div
      className="c2"
    >
      Col 2
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flexbox Flexbox with custom gutter 1`] = `
.c1 {
  box-sizing: border-box;
  max-width: 50%;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  padding-left: 4px;
  padding-right: 4px;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -4px;
  margin-right: -4px;
}

.c2 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
    size={6}
  >
    <div
      className="c2"
    >
      Col 1
    </div>
  </div>
  <div
    className="c1"
    size={6}
  >
    <div
      className="c2"
    >
      Col 2
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flexbox Flexbox with direction: column 1`] = `
.c1 {
  box-sizing: border-box;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  padding-top: 10px;
  padding-bottom: 10px;
}

.c3 {
  box-sizing: border-box;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  padding-top: 10px;
  padding-bottom: 10px;
}

.c4 {
  box-sizing: border-box;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
  padding-top: 10px;
  padding-bottom: 10px;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: -10px;
  margin-bottom: -10px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    order={2}
  >
    <div
      className="c2"
    >
      Col 1
    </div>
  </div>
  <div
    className="c3"
    order={1}
  >
    <div
      className="c2"
    >
      Col 2
    </div>
  </div>
  <div
    className="c4"
    order={3}
  >
    <div
      className="c2"
    >
      Col 3
    </div>
  </div>
</div>
`;
